--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,23 +59,24 @@ jobs:
           path: dist/
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: build
+  runs-on: ubuntu-latest
+  needs: build
 
-    steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-dist
+  steps:
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: build-dist
+        path: ./dist  # Указываем путь для извлечения артефакта
 
-      - name: Deploy to server
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SERVER: ${{ secrets.SERVER }}
-          USER: ${{ secrets.USER }}
-        run: |
-          eval "$(ssh-agent -s)"
-          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-          ssh -o StrictHostKeyChecking=no $USER@$SERVER "rm -rf /var/www/horvitz-ru/* && mkdir -p /var/www/horvitz-ru"
-          rsync -avz --delete dist/ $USER@$SERVER:/var/www/horvitz-ru/
-          ssh-agent -k
+    - name: Deploy to server
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SERVER: ${{ secrets.SERVER }}
+        USER: ${{ secrets.USER }}
+      run: |
+        eval "$(ssh-agent -s)"
+        echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+        ssh -o StrictHostKeyChecking=no $USER@$SERVER "rm -rf /var/www/horvitz-ru/* && mkdir -p /var/www/horvitz-ru"
+        rsync -avz --delete ./dist/ $USER@$SERVER:/var/www/horvitz-ru/
+        ssh-agent -k
