feat ✨: Add static file deployment workflow for website

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,3 +79,5 @@ jobs:
           ssh -o StrictHostKeyChecking=no $USER@$SERVER "rm -rf /var/www/horvitz-ru/* && mkdir -p /var/www/horvitz-ru"
           rsync -avz --delete ./dist/ $USER@$SERVER:/var/www/horvitz-ru/
           ssh-agent -k
+          cp /var/www/horvitz-ru-static/sitemap.xml /var/www/horvitz-ru/
+          cp /var/www/horvitz-ru-static/robots.txt /var/www/horvitz-ru/
