--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,13 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm install
 
+      - name: Send TG notification about setup
+          uses: appleboy/telegram-action@master
+          with:
+            to: ${{ secrets.TELEGRAM_TO }}
+            token: ${{ secrets.TELEGRAM_TOKEN }}
+            message: ${{github.repository}} setup complited ✅
+
   build:
     runs-on: ubuntu-latest
     needs: setup
@@ -55,6 +62,14 @@ jobs:
       - name: Push Docker image
         run: |
           docker push docker.dvorfs.com/horvitz/site:latest  # Загружаем образ в Docker Registry
+
+      - name: Send TG notification about build
+          uses: appleboy/telegram-action@master
+          with:
+            to: ${{ secrets.TELEGRAM_TO }}
+            token: ${{ secrets.TELEGRAM_TOKEN }}
+            message: ${{github.repository}} build complited ✅
+
 
   deploy:
     runs-on: ubuntu-latest
@@ -81,3 +96,10 @@ jobs:
 
           # Завершаем работу с SSH-агентом
           ssh-agent -k
+
+      - name: Send TG notification about deploy
+          uses: appleboy/telegram-action@master
+          with:
+            to: ${{ secrets.TELEGRAM_TO }}
+            token: ${{ secrets.TELEGRAM_TOKEN }}
+            message: ${{github.repository}} deploy complited ✅
