--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:22-alpine as build
+FROM node:22-alpine AS build
 LABEL authors="horvitz"
 
 WORKDIR /app
@@ -15,7 +15,7 @@ FROM nginx:1.27.4-alpine
 
 COPY --from=build /app/build /usr/share/nginx/html
 
-COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY docker/default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 4173
 
