feet(ci/cd)✨: Update workflow: 1. Edit docker build command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Build Docker image
         run: |
           set -e
-          docker build -t docker.dvorfs.com/horvitz/site:latest .
+          docker build -t docker.dvorfs.com/horvitz/site:latest -f docker/Dockerfile .
 
       - name: Log in to Docker registry
         uses: docker/login-action@v2
