fix(ci/cd)🐛: Add "ls" command to setup job

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,10 @@ jobs:
           set -e
           npm install
 
+      - name: List repository files
+        run: ls -al
+
+
       - name: "✅ TG: Setup completed"
         if: success()
         uses: appleboy/telegram-action@master
