--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Build Docker image
         run: |
           set -e
-          docker build -t docker.dvorfs.com/horvitz/site:latest -f ./docker/Dockerfile .
+          docker build -t docker.dvorfs.com/horvitz/site:${{ github.sha }} -f ./docker/Dockerfile .
 
       - name: Log in to Docker registry
         uses: docker/login-action@v2
@@ -74,7 +74,7 @@ jobs:
       - name: Push Docker image
         run: |
           set -e
-          docker push docker.dvorfs.com/horvitz/site:latest
+          docker push docker.dvorfs.com/horvitz/site:${{ github.sha }}
 
       - name: "✅ TG: Build completed"
         if: success()
@@ -114,10 +114,10 @@ jobs:
             docker rm -f horvitz-site || true
 
             echo "Pulling new image..."
-            docker pull docker.dvorfs.com/horvitz/site:latest
+            docker pull docker.dvorfs.com/horvitz/site:${{ github.sha }}
 
             echo "Starting new container..."
-            docker run --rm -d -p 4173:4173 --name horvitz-site docker.dvorfs.com/horvitz/site:latest
+            docker run --rm -d -p 4173:4173 --name horvitz-site docker.dvorfs.com/horvitz/site:${{ github.sha }}
           EOF
 
           ssh-agent -k
