feet(nginx)✨: Update config

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,4 +1,24 @@
+events {
+    worker_connections 1024;
+}
+
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+
+    gzip on;
+    gzip_disable "msie6";
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
+    gzip_vary on;
+    gzip_min_length 1000;
+    gzip_comp_level 6;
+
     server {
         listen 4173;
         server_name 0.0.0.0;
@@ -10,12 +30,21 @@ http {
             try_files $uri /index.html;
         }
 
-        error_page 404 /index.html;
+        error_page 404 = /index.html;
 
-        gzip on;
-        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-        gzip_vary on;
-        gzip_min_length 1000;
-        gzip_comp_level 5;
+        location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|otf)$ {
+            expires 6M;
+            access_log off;
+            add_header Cache-Control "public, max-age=15552000, immutable";
+        }
+
+        location ~* \.(json|xml)$ {
+            expires 1h;
+            add_header Cache-Control "public, max-age=3600";
+        }
+
+        location ~ /\. {
+            deny all;
+        }
     }
 }
