--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,12 +94,7 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: "❌ [BUILD FAILED] - Repo: ${{ github.repository }}\nBranch: ${{ github.ref_name }}"
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Deploy Docker image to server
+      - name: Deploy Docker image to Swarm
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SERVER: ${{ secrets.SERVER }}
@@ -108,18 +103,30 @@ jobs:
           set -e
           eval "$(ssh-agent -s)"
           echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-
+          
           ssh -o StrictHostKeyChecking=no $USER@$SERVER << EOF
-            echo "Stopping old container..."
-            docker rm -f horvitz-site || true
+            echo "Updating Swarm service..."
 
-            echo "Pulling new image..."
-            docker pull docker.dvorfs.com/horvitz/site:${{ github.sha }}
+            # Обновление службы в Docker Swarm
+            docker service update \
+             --image docker.dvorfs.com/horvitz/site:${{ github.sha }} \
+             --force \
+             horvitz-site
 
-            echo "Starting new container..."
-            docker run --rm -d -p 4173:4173 --name horvitz-site docker.dvorfs.com/horvitz/site:${{ github.sha }}
+            # Если службы нет, создаём её
+            if ! docker service ls | grep -q horvitz-site; then
+             echo "Service doesn't exist, creating new service..."
+          
+             docker service create \
+               --name horvitz-site \
+               --replicas 3 \
+               --publish 4173:4173 \
+               --update-parallelism 1 \
+               --constraint 'node.role == worker' \
+               docker.dvorfs.com/horvitz/site:${{ github.sha }}
+            fi
           EOF
-
+          
           ssh-agent -k
 
       - name: "✅ TG: Deploy completed"
