--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,7 +94,12 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: "❌ [BUILD FAILED] - Repo: ${{ github.repository }}\nBranch: ${{ github.ref_name }}"
 
-      - name: Deploy Docker image to Swarm
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Deploy service to Swarm cluster
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SERVER: ${{ secrets.SERVER }}
@@ -105,26 +110,14 @@ jobs:
           echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
           
           ssh -o StrictHostKeyChecking=no $USER@$SERVER << EOF
-            echo "Updating Swarm service..."
-
-            # Обновление службы в Docker Swarm
-            docker service update \
-             --image docker.dvorfs.com/horvitz/site:${{ github.sha }} \
-             --force \
-             horvitz-site
-
-            # Если службы нет, создаём её
-            if ! docker service ls | grep -q horvitz-site; then
-             echo "Service doesn't exist, creating new service..."
-          
-             docker service create \
-               --name horvitz-site \
-               --replicas 3 \
-               --publish 4173:4173 \
-               --update-parallelism 1 \
-               --constraint 'node.role == worker' \
-               docker.dvorfs.com/horvitz/site:${{ github.sha }}
-            fi
+            echo "Deploying to Swarm..."
+            docker service rm horvitz-site || true
+            docker service create \
+              --name horvitz-site \
+              --replicas 3 \
+              --publish 4173:4173 \
+              --constraint 'node.role == worker' \
+              docker.dvorfs.com/horvitz/site:${{ github.sha }}
           EOF
           
           ssh-agent -k
